# infmachine_examples

./: Cargo.toml  README.md
src/: prefix_op.rs  prefix_sum.rs  simple_inc.rs  simple_inc2.rs  simple_inc3.rs  state_test.rs  utils.rs  utils_test.rs
src/utils/: basic.rs  functions.rs  helpers.rs  infdata.rs  mod.rs
