[package]
name = "infmachine_examples0"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple_inc"
path = "src/simple_inc.rs"

[[bin]]
name = "simple_inc2"
path = "src/simple_inc2.rs"

[[bin]]
name = "simple_inc3"
path = "src/simple_inc3.rs"

[dependencies]
infmachine_gen = { path = "../infmachine_gen", version = "0.1.0" }
