[package]
name = "infmachine_examples0"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "state_test"
path = "src/state_test.rs"

[[bin]]
name = "simple_inc"
path = "src/simple_inc.rs"

[[bin]]
name = "simple_inc2"
path = "src/simple_inc2.rs"

[[bin]]
name = "simple_inc3"
path = "src/simple_inc3.rs"

[[bin]]
name = "prefix_op"
path = "src/prefix_op.rs"

[[bin]]
name = "utils_test"
path = "src/utils_test.rs"

[dependencies]
infmachine_gen = { path = "../infmachine_gen", version = "0.1.0" }
